@@ -1,12 +1,14 @@
 package org.violetmoon.quark.content.client.module;
 
 import com.google.common.collect.ImmutableSet;
+import com.mojang.blaze3d.platform.InputConstants;
 import com.mojang.blaze3d.platform.InputConstants.Type;
 
 import net.minecraft.client.KeyMapping;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.components.Button;
 import net.minecraft.client.gui.components.events.GuiEventListener;
+import net.minecraft.client.gui.screens.controls.KeyBindsScreen;
 import net.minecraft.client.resources.language.I18n;
 
 import org.lwjgl.glfw.GLFW;
@@ -20,6 +22,7 @@ import org.violetmoon.zeta.module.ZetaLoadModule;
 import org.violetmoon.zeta.module.ZetaModule;
 
 import java.util.List;
+import java.util.Objects;
 
 @ZetaLoadModule(category = "client")
 public class BackButtonKeybindModule extends ZetaModule {
@@ -30,6 +33,8 @@ public class BackButtonKeybindModule extends ZetaModule {
 		private KeyMapping backKey;
 		private List<GuiEventListener> listeners;
 
+		private InputConstants.Key lastKey; //for optionsScreenHack
+
 		@LoadEvent
 		public void registerKeybinds(ZKeyMapping event) {
 			//TODO ZETA: dunno if this predicate works lol
@@ -38,6 +43,7 @@ public class BackButtonKeybindModule extends ZetaModule {
 
 		@PlayEvent
 		public void openGui(ZScreen.Init.Pre event) {
+			lastKey = backKey.getKey();
 			listeners = event.getListenersList();
 		}
 
@@ -49,9 +55,24 @@ public class BackButtonKeybindModule extends ZetaModule {
 
 		@PlayEvent
 		public void onMouseInput(ZScreen.MouseButtonPressed.Post event) {
+			if(keybindsScreenHack(event))
+				return;
+
 			int btn = event.getButton();
 			if(backKey.getKey().getType() == Type.MOUSE && btn != GLFW.GLFW_MOUSE_BUTTON_LEFT && btn == backKey.getKey().getValue())
 				clicc();
+		}
+
+		private boolean keybindsScreenHack(ZScreen evt) {
+			if(!(evt.getScreen() instanceof KeyBindsScreen))
+				return false; //not applicable
+
+			//If the player is on the keybinds screen and the back button has changed since we last looked, ignore the back press.
+			//This prevents rebinding the back key to a mouse button instantly kicking you out of the keybinds menu. (#4671)
+			//For some reason this hack doesn't need to be applied to keyboard buttons? Only mouse clicks.
+			boolean different = !Objects.equals(lastKey, backKey.getKey());
+			lastKey = backKey.getKey();
+			return different;
 		}
 
 		private void clicc() {
